log
Fri 18 Mar 2022 02:21:23 PM UTC: 
 tests:  0|6
total_score: 0/70
236ac6c
Fri 18 Mar 2022 02:30:50 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:3: error: unknown type name ‘list’; did you mean ‘List’?
   32 |   list* lista =(list *) malloc(sizeof(lsit));
      |   ^~~~
      |   List
list.c:32:17: error: ‘list’ undeclared (first use in this function); did you mean ‘lista’?
   32 |   list* lista =(list *) malloc(sizeof(lsit));
      |                 ^~~~
      |                 lista
list.c:32:17: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:23: error: expected expression before ‘)’ token
   32 |   list* lista =(list *) malloc(sizeof(lsit));
      |                       ^
list.c:34:8: error: request for member ‘head’ in something not a structure or union
   34 |   lista->head = NULL;
      |        ^~
list.c:35:8: error: request for member ‘nex’ in something not a structure or union
   35 |   lista->nex = NULL;
      |        ^~
list.c:36:8: error: request for member ‘prev’ in something not a structure or union
   36 |   lista->prev = NULL;
      |        ^~
list.c:38:10: error: returning ‘int *’ from a function with incompatible return type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   38 |   return lista;
      |          ^~~~~
cc1: all warnings being treated as errors
Compilation failed
2c325e8
Fri 18 Mar 2022 02:31:13 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:3: error: unknown type name ‘list’; did you mean ‘List’?
   32 |   list* lista =(list *) malloc(sizeof(lista));
      |   ^~~~
      |   List
list.c:32:17: error: ‘list’ undeclared (first use in this function); did you mean ‘lista’?
   32 |   list* lista =(list *) malloc(sizeof(lista));
      |                 ^~~~
      |                 lista
list.c:32:17: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:23: error: expected expression before ‘)’ token
   32 |   list* lista =(list *) malloc(sizeof(lista));
      |                       ^
list.c:35:8: error: request for member ‘head’ in something not a structure or union
   35 |   lista->head = NULL;
      |        ^~
list.c:36:8: error: request for member ‘nex’ in something not a structure or union
   36 |   lista->nex = NULL;
      |        ^~
list.c:37:8: error: request for member ‘prev’ in something not a structure or union
   37 |   lista->prev = NULL;
      |        ^~
list.c:39:10: error: returning ‘int *’ from a function with incompatible return type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   39 |   return lista;
      |          ^~~~~
cc1: all warnings being treated as errors
Compilation failed
c41f068
Fri 18 Mar 2022 02:31:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:8: error: ‘List’ {aka ‘struct List’} has no member named ‘nex’
   36 |   lista->nex = NULL;
      |        ^~
list.c:37:8: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   37 |   lista->prev = NULL;
      |        ^~
Compilation failed
8679352
Fri 18 Mar 2022 02:32:04 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:8: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   36 |   lista->next = NULL;
      |        ^~
list.c:37:8: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   37 |   lista->prev = NULL;
      |        ^~
Compilation failed
b627111
Fri 18 Mar 2022 02:33:46 PM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
d867ad8
Fri 18 Mar 2022 02:49:08 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
adc08ad
Fri 18 Mar 2022 02:49:47 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2926c05
Fri 18 Mar 2022 02:53:11 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:50:53: error: expected statement before ‘)’ token
   50 |   if((list->current != NULL) && (list->head !=NULL))){
      |                                                     ^
list.c:50:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   50 |   if((list->current != NULL) && (list->head !=NULL))){
      |   ^~
list.c:50:54: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   50 |   if((list->current != NULL) && (list->head !=NULL))){
      |                                                      ^
cc1: all warnings being treated as errors
Compilation failed
1707894
Fri 18 Mar 2022 02:53:31 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
695d2da
Fri 18 Mar 2022 02:54:26 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
414b419
Fri 18 Mar 2022 02:56:25 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
d490946
Fri 18 Mar 2022 02:58:31 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
af0b4c2
Fri 18 Mar 2022 03:03:00 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|4
total_score: 25/70
7618681
Fri 18 Mar 2022 03:07:00 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 35/70
dee1854
Fri 18 Mar 2022 03:15:02 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:74:9: error: unused variable ‘nodo’ [-Werror=unused-variable]
   74 |   Node* nodo = createNode(data);
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
8778fcf
Fri 18 Mar 2022 06:00:11 PM UTC: 
 list.c | 11 ++++-------
 1 file changed, 4 insertions(+), 7 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:74:11: error: unused variable ‘nodo’ [-Werror=unused-variable]
   74 |     Node *nodo = createNode(data);
      |           ^~~~
cc1: all warnings being treated as errors
Compilation failed
54bb54b
Fri 18 Mar 2022 06:00:31 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
e5e1359
Sat 19 Mar 2022 02:32:30 AM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
b384412
Sat 19 Mar 2022 02:34:46 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  9|3
total_score: 35/70
9efab64
Sat 19 Mar 2022 02:39:46 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
084db47
Sat 19 Mar 2022 02:41:52 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
f7e391a
Sat 19 Mar 2022 08:11:13 PM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
7cfb2c1
Sat 19 Mar 2022 08:11:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
b577989
Sat 19 Mar 2022 08:16:07 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  10|2
total_score: 45/70
11a0f7b
